Admin Login Page

--- a/application/views/admin/login.html
+++ b/application/views/admin/login.html
@@ -3,8 +3,8 @@
 <head>
 <title></title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="styles/general.css" rel="stylesheet" type="text/css" />
-<link href="styles/main.css" rel="stylesheet" type="text/css" />
+<link href="<?= base_url('application/views/admin/styles/general.css') ?>" rel="stylesheet" type="text/css" />
+<link href="<?= base_url('application/views/admin/styles/main.css') ?>" rel="stylesheet" type="text/css" />
 <style type="text/css">
 body {
   color: white;
@@ -16,7 +16,7 @@ body {
 <form method="post" action="privilege.php" name='theForm'>
   <table cellspacing="0" cellpadding="0" style="margin-top: 100px" align="center">
   <tr>
-    <td><img src="images/login.png" width="178" height="256" border="0" alt="ECSHOP" /></td>
+    <td><img src="<?= base_url('application/views/admin/images/login.png') ?>" width="178" height="256" border="0" alt="ECSHOP" /></td>
     <td style="padding-left: 50px">
       <table>
       <tr>
