验证码存入session 表单输入 及 验证

--- a/application/views/admin/login.html
+++ b/application/views/admin/login.html
@@ -13,7 +13,7 @@ body {
 
 </head>
 <body style="background: #278296">
-<form method="post" action="privilege.php" name='theForm'>
+<form method="post" action="<?= site_url('admin/privilege/signin') ?>" name='theForm'>
   <table cellspacing="0" cellpadding="0" style="margin-top: 100px" align="center">
   <tr>
     <td><img src="<?= base_url('application/views/admin/images/login.png') ?>" width="178" height="256" border="0" alt="ECSHOP" /></td>
