--- a/application/views/admin/cat_edit.html
+++ b/application/views/admin/cat_edit.html
@@ -4,8 +4,8 @@
 <title>SHOP 管理中心 - 添加分类 </title>
 <meta name="robots" content="noindex, nofollow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="styles/general.css" rel="stylesheet" type="text/css" />
-<link href="styles/main.css" rel="stylesheet" type="text/css" />
+<link href="<?= base_url('application/views/admin/styles/general.css') ?>" rel="stylesheet" type="text/css" />
+<link href="<?= base_url('application/views/admin/styles/main.css') ?>" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
@@ -16,32 +16,23 @@
 </h1>
 <!-- start add new category form -->
 <div class="main-div">
-  <form action="category.php" method="post" name="theForm" enctype="multipart/form-data" onsubmit="return validate()">
+  <form action="<?= site_url('admin/region/modify') ?>" method="post" name="theForm" enctype="multipart/form-data" onsubmit="return validate()">
 	 <table width="100%" id="general-table">
 		<tbody>
 			<tr>
 				<td class="label">分类名称:</td>
-				<td><input type="text" name="cat_name" maxlength="20" value="" size="27"> <font color="red">*</font></td>
+				<td><input type="text" name="cat_name" maxlength="20" value="<?= $region['cat_name'] ?>" size="27"> <font color="red">*</font></td>
 			</tr>
 			<tr>
 				<td class="label">上级分类:</td>
 				<td>
 					<select name="parent_id">
-						<option value="0">顶级分类</option>
-						<option value="1">手机类型</option>
-						<option value="5">&nbsp;&nbsp;&nbsp;&nbsp;双模手机</option>
-						<option value="2">&nbsp;&nbsp;&nbsp;&nbsp;CDMA手机</option>
-						<option value="3">&nbsp;&nbsp;&nbsp;&nbsp;GSM手机</option>
-						<option value="4">&nbsp;&nbsp;&nbsp;&nbsp;3G手机</option>
-						<option value="12">充值卡</option>
-						<option value="15">&nbsp;&nbsp;&nbsp;&nbsp;联通手机充值卡</option>
-						<option value="13">&nbsp;&nbsp;&nbsp;&nbsp;小灵通/固话充值卡</option>
-						<option value="14">&nbsp;&nbsp;&nbsp;&nbsp;移动手机充值卡</option>
-						<option value="6">手机配件</option>
-						<option value="8">&nbsp;&nbsp;&nbsp;&nbsp;耳机</option>
-						<option value="9">&nbsp;&nbsp;&nbsp;&nbsp;电池</option>
-						<option value="11">&nbsp;&nbsp;&nbsp;&nbsp;读卡器和内存卡</option>
-						<option value="7">&nbsp;&nbsp;&nbsp;&nbsp;充电器</option>          
+                        <option value="0">顶级分类</option>
+                        <?php foreach($regions as $r): ?>
+                        <option value="<?= $r['cat_id'] ?>" <?php echo ($r['cat_id'] == $region['parent_id'] ? 'selected' : '') ?>>
+                            <?= str_repeat('&nbsp;&nbsp;&nbsp;&nbsp;', $r['level']).$r['cat_name'] ?>
+                        </option>
+                        <?php endforeach; ?>
 					</select>
 				</td>
 			</tr>
@@ -84,7 +75,7 @@
       </div>
     <input type="hidden" name="act" value="insert">
     <input type="hidden" name="old_cat_name" value="">
-    <input type="hidden" name="cat_id" value="">
+    <input type="hidden" name="cat_id" value="<?= $region['cat_id'] ?>">
   </form>
 </div>
 
