--- a/application/views/admin/goods_type_add.html
+++ b/application/views/admin/goods_type_add.html
@@ -3,13 +3,13 @@
 <head>
 <title>SHOP 管理中心 - 类型管理 </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="styles/general.css" rel="stylesheet" type="text/css" />
-<link href="styles/main.css" rel="stylesheet" type="text/css" />
+<link href="<?= base_url('application/views/admin/styles/general.css') ?>" rel="stylesheet" type="text/css" />
+<link href="<?= base_url('application/views/admin/styles/main.css') ?>" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
 <h1>
-<span class="action-span"><a href="goods_type.php?act=list">商品类型列表</a></span>
+<span class="action-span"><a href="<?= site_url('admin/type/index') ?>">商品类型列表</a></span>
 <span class="action-span1"><a href="index.php?act=main">SHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 新建商品类型 </span>
 <div style="clear:both"></div>
 </h1>
@@ -19,7 +19,7 @@
     <table cellspacing="1" cellpadding="3" width="100%">
       <tbody><tr>
         <td class="label">商品类型名称:</td>
-        <td><input type="text" name="cat_name" value="" size="40">
+        <td><input type="text" name="type_name" value="" size="40">
         <span class="require-field">*</span></td>
       </tr>
       <tr style="display:none">
@@ -35,7 +35,7 @@
       </tr>
       <tr align="center">
         <td colspan="2">
-          <input type="hidden" name="cat_id" value="">
+          <input type="hidden" name="type_id" value="">
           <input type="submit" value=" 确定 " class="button">
           <input type="reset" value=" 重置 " class="button">
           <input type="hidden" name="act" value="insert">
