--- a/application/views/admin/goods_add.html
+++ b/application/views/admin/goods_add.html
@@ -646,7 +646,7 @@
 
         <div class="button-div">
           <input type="hidden" name="goods_id" value="32">
-                    <input type="button" value=" 确定 " class="button" onclick="validate('32')">
+                    <input type="submit" value=" 确定 " class="button">
           <input type="reset" value=" 重置 " class="button">
         </div>
         <input type="hidden" name="act" value="update">
